# VideoProcessingFramework

./: pyproject.toml  setup.py
src/PytorchNvCodec/: pyproject.toml  setup.py
